Prevent flicker before image loads

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -66,6 +66,7 @@ article.post {
   margin: 1em 0;
   width: 100%;
   max-width: 31.25em;
+  height: auto;
 }
 
 .post__body .embed,
